# simple_audio_nrf

./: README.md
code/i2s_zephyr/: CMakeLists.txt  prj.conf
code/i2s_zephyr/src/: cmsis_dsp_test.c  cmsis_dsp_test.h  cmsis_nn_test.c  cmsis_nn_test.h  i2s_mic.c  i2s_mic.h  loopback.c  loopback.h  main.c  spectrogram.h  weights.h
